changed structure of packages to improve understanding of application. formatted code. cleaned up all imports